--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
         crossorigin=""></script>
 
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=IM+Fell+DW+Pica">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Gideon+Roman">
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
